--- a/src/components/header/toggleButton/toggleButton.module.scss
+++ b/src/components/header/toggleButton/toggleButton.module.scss
@@ -7,6 +7,7 @@
   padding: 10px;
   border-radius: 10px;
   cursor: pointer;
+  border: none;
 }
 
 .lightContainer {
@@ -15,6 +16,10 @@
 
   &:hover {
     background: variables.$neutral300;
+  }
+
+  &:focus {
+    outline: variables.$red700;
   }
 }
 
