--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -6,3 +6,7 @@ $neutral300: hsl(0, 0%, 78%);
 $neutral200: hsl(217, 61%, 90%);
 $neutral100: hsl(0, 0%, 93%);
 $neutral0: hsl(200, 60%, 99%);
+
+$red700: hsl(3, 77%, 44%);
+$red500: hsl(3, 71%, 56%);
+$red200: hsl(3, 86%, 64%);
